kustomize/deployments.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: chaz
  name: incidents-deployment-front
  labels:
    app: incidents-front
spec:
  selector:
    matchLabels:
      app: incidents-front
  template:
    metadata:
      labels:
        app: incidents-front
    spec:
      containers:
        - name: incidents-front
          image: ghcr.io/chazapp/incidents-front:1.2.0
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            timeoutSeconds: 5
          volumeMounts:
            - name: env-js
              mountPath: /usr/share/nginx/html/env.js
              subPath: env.js
      volumes:
        - name: env-js
          configMap:
            name: incidents-front-cm
      imagePullSecrets:
        - name: ghcr-creds

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: chaz
  name: incidents-deployment-api
  labels:
    app: incidents-api
spec:
  selector:
    matchLabels:
      app: incidents-api
  template:
    metadata:
      labels:
        app: incidents-api
    spec:
      containers:
        - name: incidents-api
          image: ghcr.io/chazapp/incidents-api:1.0.12
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
          ports:
            - containerPort: 8000
          livenessProbe:
            timeoutSeconds: 5
            httpGet:
              path: /health/
              port: 8000
              scheme: HTTP
              httpHeaders:
                - name: Host
                  value: incidents-api.chaz.pro
              
          readinessProbe:
            timeoutSeconds: 5
            httpGet:
              path: /health/
              port: 8000
              scheme: HTTP
            
              httpHeaders:
                - name: Host
                  value: incidents-api.chaz.pro
      imagePullSecrets:
        - name: ghcr-creds

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incidents-deployment-db
  namespace: chaz
  labels:
    app: incidents-db
spec:
  selector:
    matchLabels:
      app: incidents-db
  template:
    metadata:
      labels:
        app: incidents-db
    spec:
      containers:
        - name: postgres
          image: postgres:14.0-alpine

          imagePullPolicy: Always
          resources:
            requests:
              memory: "1024Mi"
              cpu: "250m"
          ports:
            - containerPort: 5432
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 2
            periodSeconds: 2
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 2
            periodSeconds: 2
            timeoutSeconds: 5
          volumeMounts:
            - name: incidents-db-data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        - name: incidents-db-data
          persistentVolumeClaim:
            claimName: incidents-db-pvc
