kustomize/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: incidents-front-service
spec:
  type: NodePort
  selector:
    app: incidents-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: incidents-api-service
spec:
  type: NodePort
  selector:
    app: incidents-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000


---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    app: incidents-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
